# aihwkit

./: .clang-format  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CUDA.Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  builddockerimageCUDA.sh  pyproject.toml  requirements-dev.txt  requirements-examples.txt  requirements.txt  setup.cfg  setup.py  test.py  wirno
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  temporary.md
.github/workflows/: build-wheel-310.yml  build-wheel-311.yml  build-wheel-312.yml  build-wheel-cuda-310.yml  build-wheels-cuda.yml  build-wheels.yml  ci.yml  release-build.yml  test-and-lint.yml
JART_v1b_tests/: 00_basic_test_v1b.py  01_simple_layer_v1b.py  02_multiple_layer_v1b.py  03_mnist_training_v1b.py  Ndiscmax_and_Ndiscmin_dtod.yml  Ndiscmax_and_Ndiscmin_dtod_30%_unbonded.yml  Ndiscmax_ctoc_10%.yml  Ndiscmax_ctoc_30%.yml  Ndiscmax_ctoc_90%.yml  Ndiscmax_dtod_30%_unbonded.yml  Ndiscmax_dtod_realistic.yml  Ndiscmin_ctoc_10%.yml  Ndiscmin_ctoc_30%.yml  Ndiscmin_ctoc_90%.yml  Ndiscmin_dtod_30%.yml  Ndiscmin_dtod_30%_unbonded.yml  Ndiscmin_dtod_realistic.yml  README.md  basic_test_CUDA.yml  ldet_and_rdet_dtod.yml  ldet_and_rdet_dtod_30%_unbonded.yml  ldet_ctoc_direct_1%.yml  ldet_ctoc_direct_30%.yml  ldet_ctoc_slope_10%.yml  ldet_ctoc_slope_30%.yml  ldet_dtod_30%.yml  ldet_dtod_30%_unbonded.yml  ldet_dtod_realistic.yml  mnist_training_floating_point.py  noise_free.yml  rdet_ctoc_direct_1%.yml  rdet_ctoc_direct_10%.yml  rdet_ctoc_direct_30%.yml  rdet_ctoc_slope_10%.yml  rdet_ctoc_slope_30%.yml  rdet_dtod_30%.yml  rdet_dtod_30%_unbonded.yml  rdet_dtod_realistic.yml  realistic_mixed.yml  realistic_mixed_old.yml  (+4 more)
cmake/: dependencies.cmake  dependencies_cuda.cmake  dependencies_hip.cmake  dependencies_test.cmake
cmake/Modules/: FindAVX.cmake  FindCUB.cmake  FindMKL.cmake  FindOpenBLAS.cmake  FindTorch.cmake
docs/: Makefile  requirements.txt
docs/source/: advanced_install.rst  analog_ai.rst  analog_ai_hw.rst  analog_training_presets.rst  analog_update.rst  api_reference.rst  changelog.rst  composer_overview.rst  conf.py  design.rst  developer_install.rst  development_conventions.rst  glossary.rst  hwa_training.rst  index.rst  install.rst  paper_references.rst  pcm_inference.rst  pros_cons.rst  reram_inference.rst  roadmap.rst  using_experiments.rst  using_pytorch.rst  using_simulator.rst
examples/: 00_basic_test_v1b.py  00_v1b_basic_test.py  01_simple_layer.py  01_simple_layer_v1b.py  02_multiple_layer.py  02_multiple_layer_v1b.py  03_mnist_training.py  03_mnist_training_v1b.py  04_lenet5_training.py  05_simple_layer_hardware_aware.py  06_lenet5_hardware_aware.py  07_simple_layer_with_other_devices.py  08_simple_layer_with_tiki_taka.py  09_simple_layer_deterministic_pulses.py  10_plot_presets.py  11_vgg8_training.py  12_simple_layer_with_mixed_precision.py  13_experiment_3fc.py  14_experiment_custom_scheduler.py  15_simple_lstm.py  15_simple_rnn.py  16_mnist_gan.py  17_resnet34_imagenet_conversion_to_analog.py  18_cifar10_on_resnet.py  19_analog_info.py  19_analog_summary_lenet.py  1_simple_layer.py  20_mnist_ddp.py  21_fit_device_data.py  21_selfdefine.py  22_piecewise_step_device.py  22_war_and_peace_lstm.py  23_using_analog_tile_as_matrix.py  24_bert_on_squad.py  25_torch_tile_lenet5_hardware_aware.py  26_correlation_detection.py  27_input_range_calibration.py  28_advanced_irdrop.py  29_linalg_krylov.py  2_multiple_layer.py  (+23 more)
notebooks/: LeNet5.ipynb  README.md  analog_device_nonIdealities_tutorial.ipynb  analog_fusion.ipynb  analog_lenet5.csv  analog_sensitivity_LeNet5.ipynb  analog_training_LeNet5.ipynb  analog_training_LeNet5_TT.ipynb  analog_training_LeNet5_hwa.ipynb  analog_training_LeNet5_plot.ipynb  output-updated_analog_lenet5.csv
src/aihwkit/simulator/: CMakeLists.txt  __init__.py  devices.py  inference_tiles.py  noise_models.py  parameters.py  tiles.py  tiles_indexed.py
src/aihwkit/simulator/configs/: __init__.py  compounds.py  configs.py  devices.py  enums.py  helpers.py  utils.py
src/aihwkit/simulator/digital_low_precision/: LICENSE  __init__.py  base_quantized_classes.py  base_quantized_model.py  config_utils.py  hijacker.py  quantization_manager.py  quantizers.py  range_estimators.py  utils.py
src/aihwkit/simulator/parameters/: __init__.py  base.py  enums.py  helpers.py  inference.py  io.py  mapping.py  pre_post.py  quantization.py  runtime.py  training.py  utils.py
src/aihwkit/simulator/presets/: __init__.py  compounds.py  configs.py  devices.py  inference.py  utils.py  web.py
src/aihwkit/simulator/rpu_base_src/: rpu_base.cpp  rpu_base.h  rpu_base_devices.cpp  rpu_base_tiles.cpp  rpu_base_tiles_cuda.cpp  rpu_base_utils.cpp
src/aihwkit/simulator/tiles/: __init__.py  analog.py  analog_mvm.py  analog_mvm_irdrop_t.py  array.py  base.py  custom.py  floating_point.py  functions.py  inference.py  inference_torch.py  module.py  numpy.py  periphery.py  quantized_inference_torch.py  rpucuda.py  torch_tile.py  torch_tile_irdrop_t.py  transfer.py  utils.py
test/: hello.py
tests/: README.md  __init__.py  test_analog_ctx.py  test_bindings_tiles.py  test_bindings_tiles_numpy.py  test_calibration.py  test_client.py  test_cloud_runner.py  test_continue_training.py  test_conversions.py  test_cuda_discretize_per_channel.py  test_experiment_runners.py  test_experiments.py  test_export.py  test_extension.py  test_inference.py  test_inference_tiles.py  test_infinite_granularity.py  test_layer_base.py  test_layers.py  test_layers_analog.py  test_layers_convolution.py  test_layers_lineal.py  test_layers_linear.py  test_layers_lstm.py  test_layers_mapped.py  test_layers_rnn.py  test_localrunner_infer.py  test_noise_models.py  test_optimizers.py  test_presets.py  test_quant_conversion.py  test_quantized_tile.py  test_rpu_configurations.py  test_simulator_devices.py  test_simulator_tiles.py  test_specific_tiles.py  test_torch_tiles.py  test_utils.py
(+522 files in other folders)
