[build-system]
requires = [
  "setuptools>=66.0.0",
  "wheel",
  "ninja",
  "cmake>=3.18",
  "scikit-build>=0.11.1",
  "scikit-learn",
  "pybind11>=2.6.2",
  "torch>=1.9",
  "torchvision",
  "scipy",
  "requests>=2.25,<3",
  "numpy>=1.22,<2",
  "protobuf>=4.21.6",
  "tqdm",
  "mypy==0.991",
  "ninja; platform_system!='Windows'",
]
build-backend = "setuptools.build_meta"

[project]
name = "aihwkit"
version = {file = "src/aihwkit/VERSION.txt"}
description = "IBM Analog Hardware Acceleration Kit"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "IBM Research", email = "aihwkit@us.ibm.com"},
]
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
keywords = [
  "ai",
  "analog",
  "rpu",
  "torch",
  "memristor",
  "pcm",
  "reram",
  "crossbar",
  "in-memory",
  "nvm",
  "non-von-neumann",
  "non-volatile memory",
  "phase-change material",
]
dependencies = [
  "torch>=1.9", # Note: TORCH_VERSION_SPECIFIER logic needs to be handled during build or by user
  "torchvision",
  "scipy",
  "requests>=2.25,<3",
  "numpy>=1.22",
  "protobuf>=4.21.6",
]

[project.urls]
Homepage = "https://github.com/IBM/aihwkit"

[project.optional-dependencies]
visualization = ["matplotlib>=3.0"]
fitting = ["lmfit"]
bert = ["transformers", "evaluate", "datasets", "wandb", "tensorboard"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["aihwkit"] # Assuming find_packages("src") primarily finds "aihwkit"
include-package-data = true

[tool.setuptools.package-data]
aihwkit = ["VERSION.txt"]

[tool.skbuild]
cmake.minimum-version = "3.18"
